--- a/css/main.scss
+++ b/css/main.scss
@@ -1,2 +1,6 @@
 @use "reset";
-@use "quiz-banner";
+@use "main-navigation";
+@use "main-filters";
+@use "football-cards";
+@use "global";
+@use "infopage-banner";
