--- a/css/main.css
+++ b/css/main.css
@@ -56,11 +56,168 @@ table {
   box-sizing: border-box;
 }
 
-.page-banner-container .page-banner {
+.page-header {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.page-header .logo, .page-header .menu-bars, .page-header .navbar-container .navbar li a, .page-header .exit-menu {
+  text-decoration: none;
+  color: #37003a;
+  font-size: 1.5rem;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+.page-header .logo:hover, .page-header .menu-bars:hover, .page-header .navbar-container .navbar li a:hover, .page-header .exit-menu:hover {
+  background-color: #37003a;
+  color: #fff;
+}
+.page-header .navbar-container {
+  height: 0%;
+  width: 100%;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  background-color: white;
+  transition: 0.8s;
+  overflow: hidden;
+}
+.page-header .navbar-container .exit-menu {
+  width: 100%;
+  text-align: right;
+  background-color: #37003a;
+  color: #fff;
+  border: 1px solid #37003a;
+}
+.page-header .navbar-container .exit-menu:hover {
+  background-color: #fff;
+  color: #37003a;
+}
+.page-header .navbar-container .navbar {
+  display: flex;
+  flex-direction: column;
+}
+.page-header .navbar-container .navbar__link {
+  display: block;
+  text-align: center;
+  border-bottom: 1px solid white;
+  border-top: 1px solid white;
+}
+.page-header .navbar-container .navbar__link-icon {
+  float: left;
+}
+.page-header .navbar-container .navbar__link:hover {
+  background-color: white;
+  border-bottom: 1px solid #37003a;
+  border-top: 1px solid #37003a;
+}
+@media (min-width: 768px) {
+  .page-header .page-header {
+    flex-wrap: nowrap;
+  }
+  .page-header .menu-bars, .page-header .exit-menu {
+    display: none;
+  }
+  .page-header .navbar-container {
+    position: static;
+    width: auto;
+  }
+  .page-header .navbar-container .navbar {
+    flex-direction: row;
+  }
+  .page-header .navbar-container .navbar__link:hover {
+    background-color: #37003a;
+    border: 1px solid #37003a;
+    color: white;
+    transition: 0.2s;
+  }
+}
+
+/*.content-tabs{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(55, 0, 58);
+    padding-bottom: 20px;
+
+    .tabs{
+        width: 50%;
+        background-color: rgb(55, 0, 58);
+        border: 1px solid rgba(255, 255, 255,.5);
+        padding: 10px 5px;
+        color: #999;
+
+        &:hover{
+            background-color: rgba(255, 255, 255, .1);
+            border: 1px solid rgba(255, 255, 255, .1);
+            color: #fff;
+        }
+    }
+    .active-tab{
+        color: #eee;
+        border: 1px solid rgb(55, 0, 58);
+        border-top: none;
+    }
+}*/
+.content-filters {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.football-card-container {
+  max-width: 370px;
+  height: 420px;
+  margin: 0 auto;
+  position: relative;
+  box-shadow: inset 5px 5px 5px rgba(55, 0, 58, 0.2), inset -5px -5px 15px rgba(69, 19, 73, 0.1), 5px 5px 15px rgba(55, 0, 58, 0.3), -5px -5px 15px rgba(69, 19, 73, 0.1);
+  border-radius: 15px;
+  transition: 0.5s;
+}
+.football-card-container .football-card-cover {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
+  background: #451349;
+  border-radius: 20px;
+  overflow: hidden;
+  transition: 0.5s;
+  color: white;
+}
+.football-card-container .football-card-cover .logo-img {
   max-width: 100%;
+  height: 100px;
+  border: 1px solid white;
+}
+.football-card-container p {
+  border: 1px solid white;
+  text-align: center;
+}
+
+.content-hero {
+  background: #37003a;
+  padding: 20px;
+  display: grid;
+  background-image: url("/images/premier-league/premier-league-bg.png"), linear-gradient(to top, #5b0a61 0%, #37003a 100%);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.content-hero .premier-league-clubs {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+}
+.content-hero .club-logo {
+  width: 100%;
   height: auto;
 }
-.page-banner-container .banner-title {
-  position: relative;
-  right: 0;
+.content-hero .club-logo:hover {
+  transform: scale(2);
+  transition: 0.5s;
 }/*# sourceMappingURL=main.css.map */
