--- a/css/main.css
+++ b/css/main.css
@@ -220,4 +220,95 @@ table {
 .content-hero .club-logo:hover {
   transform: scale(2);
   transition: 0.5s;
+}
+
+#athletes-header {
+  display: flex;
+  justify-content: space-around;
+}
+section {
+  border: 1px solid red;
+  background-color: black;
+}
+
+#athletes-card-container {
+  height: 20rem;
+  width: 17rem;
+  border-radius: 1rem;
+}
+#athletes-card-container .athletes-inner-card {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 1rem;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  color: black;
+  box-shadow: inset 5px 5px 5px rgba(55, 0, 58, 0.2), inset -5px -5px 15px rgba(69, 19, 73, 0.1), 5px 5px 15px rgba(55, 0, 58, 0.3), -5px -5px 15px rgba(69, 19, 73, 0.1);
+}
+#athletes-card-container #athletes-img-container {
+  padding: 0.5rem;
+  display: flex;
+  border-radius: 1rem;
+  height: 90%;
+  width: 100%;
+  -webkit-animation: shimmer 1s linear infinite;
+          animation: shimmer 1s linear infinite;
+}
+#athletes-card-container #athletes-img-container #athletes-image {
+  width: 100%;
+  height: auto;
+  border-radius: 1rem;
+}
+#athletes-card-container #athletes-card-front {
+  border-radius: 1rem;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+}
+#athletes-card-container #athletes-card-front__genre {
+  background-color: rgba(255, 255, 255, 0.4);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  position: relative;
+  left: 11rem;
+  width: 5rem;
+}
+#athletes-card-container #athletes-card-front__name {
+  background-color: white;
+  position: relative;
+  width: 10rem;
+  bottom: 1.5rem;
+  border-radius: 1rem;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+}
+#athletes-card-container #athletes-card-front__age {
+  background-color: white;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  position: relative;
+  border-radius: 1rem;
+  width: 5rem;
+  bottom: 1.2rem;
+  left: 0.5rem;
+}
+#athletes-card-container #athletes-card-back {
+  border-radius: 1rem;
+  border: 2px solid black;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  transform: rotateY(180deg);
+}
+#athletes-card-container:hover .athletes-inner-card {
+  transform: rotateY(180deg);
 }/*# sourceMappingURL=main.css.map */
