--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,7 @@ table {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  box-shadow: 0px 3px 15px 0px rgba(55, 0, 58, 0.5);
 }
 .page-header .logo, .page-header .menu-bars, .page-header .navbar-container .navbar li a, .page-header .exit-menu {
   text-decoration: none;
@@ -199,27 +200,10 @@ table {
 
 .content-hero {
   background: #37003a;
-  padding: 20px;
-  display: grid;
-  background-image: url("/images/premier-league/premier-league-bg.png"), linear-gradient(to top, #5b0a61 0%, #37003a 100%);
-  background-position: center;
-  background-repeat: no-repeat;
 }
-.content-hero .premier-league-clubs {
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-}
-.content-hero .club-logo {
-  width: 100%;
+.content-hero img {
+  max-width: 100%;
   height: auto;
-}
-.content-hero .club-logo:hover {
-  transform: scale(2);
-  transition: 0.5s;
 }
 
 #athletes-header {
