--- a/css/main.css
+++ b/css/main.css
@@ -299,4 +299,43 @@ table {
 .banner-container .banner-overlay .title {
   font-size: 2rem;
   padding: 10px;
+}
+
+.user-section {
+  margin: 2rem;
+  padding: 1rem;
+  text-align: center;
+}
+
+.user-header {
+  font-size: large;
+  font-weight: bold;
+}
+
+.input-container {
+  padding: 1rem;
+  border: 1px solid red;
+  display: flex;
+  justify-content: center;
+  align-self: auto, auto, flex-end;
+}
+
+.quiz {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+}
+.quiz__header {
+  padding: 1rem;
+}
+.quiz__box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid red;
+  margin: 0.5rem;
+}
+.quiz__btn {
+  width: 40%;
+  height: 3rem;
 }/*# sourceMappingURL=main.css.map */
