quiz page update

--- a/css/_quiz-layout.scss
+++ b/css/_quiz-layout.scss
@@ -14,7 +14,10 @@
     justify-content: center;
     align-self:  auto, auto, flex-end;
 }
-
+.user-output{
+    border: 1px solid red;
+}
+    
 .quiz{
     display: flex;
     flex-direction: column;
