--- a/css/_quiz-layout.scss
+++ b/css/_quiz-layout.scss
@@ -3,6 +3,9 @@
     padding: 1rem;
     text-align: center;
 }
+.select-cursor{
+    cursor: pointer;
+}
 .user-header{
     font-size: large;
     font-weight: bold;
@@ -38,6 +41,7 @@
     &__btn{
         width: 40%;
         height: 3rem;
+        cursor: pointer;
     }
 
 }
