--- a/css/_quiz-layout.scss
+++ b/css/_quiz-layout.scss
@@ -28,6 +28,7 @@
 
     &__header{
         padding: 1rem;
+        font-weight: bold;
     }
 
     &__box{
@@ -40,8 +41,10 @@
 
     &__btn{
         width: 40%;
-        height: 3rem;
+        height: 5rem;
         cursor: pointer;
+        background-color: yellowgreen;
+        border-radius: 0.5rem;
     }
 
 }
