--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,9 @@
 @use "reset";
 @use "main-navigation";
 @use "main-filters";
-@use "football-cards";
 @use "global";
 @use "athletes";
 @use "banner-overlay";
 @use "quiz-layout";
-@use "quiz-modal"
+@use "quiz-modal";
+@use "index-layout"
