--- a/css/main.css
+++ b/css/main.css
@@ -148,37 +148,6 @@ table {
   margin: 10px;
 }
 
-.football-card-container {
-  max-width: 370px;
-  height: 420px;
-  margin: 0 auto;
-  position: relative;
-  box-shadow: inset 5px 5px 5px rgba(55, 0, 58, 0.2), inset -5px -5px 15px rgba(69, 19, 73, 0.1), 5px 5px 15px rgba(55, 0, 58, 0.3), -5px -5px 15px rgba(69, 19, 73, 0.1);
-  border-radius: 15px;
-  transition: 0.5s;
-}
-.football-card-container .football-card-cover {
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  right: 15px;
-  bottom: 15px;
-  background: #451349;
-  border-radius: 20px;
-  overflow: hidden;
-  transition: 0.5s;
-  color: white;
-}
-.football-card-container .football-card-cover .logo-img {
-  max-width: 100%;
-  height: 100px;
-  border: 1px solid white;
-}
-.football-card-container p {
-  border: 1px solid white;
-  text-align: center;
-}
-
 .page-headline {
   text-align: center;
   font-size: 1.5rem;
@@ -402,4 +371,25 @@ table {
   visibility: visible;
   transform: scale(1);
   transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
+card-item {
+  width: 400px;
+}
+
+#content-output {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(1, auto);
+}
+
+@media only screen and (min-width: 800px) {
+  #content-output {
+    grid-template-columns: repeat(4, auto);
+  }
+}
+@media only screen and (min-width: 1200px) {
+  #content-output {
+    grid-template-columns: repeat(6, auto);
+  }
 }/*# sourceMappingURL=main.css.map */
