--- a/css/_quiz-modal.scss
+++ b/css/_quiz-modal.scss
@@ -5,8 +5,8 @@
     align-items: center;
     top: 0px;
     left: 0px;
-    visibility: hidden;
-    height: 100%;
+   // visibility: hidden;
+    height: 80%;
     width: 100%;
     background-color: rgba(55, 0, 58, 0.2)
 }
