close-btn changes

--- a/css/_quiz-modal.scss
+++ b/css/_quiz-modal.scss
@@ -10,6 +10,7 @@
     width: 100%;
     
 }
+/*
 .modal-content{
     
     box-shadow:  10px 8px 5px rgba(55, 0, 58, .2);
@@ -55,3 +56,4 @@
     transform: scale(1.0);
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
+*/
