--- a/css/_quiz-modal.scss
+++ b/css/_quiz-modal.scss
@@ -1,11 +1,11 @@
 .modal{
     position: fixed;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     top: 0px;
     left: 0px;
-   // visibility: hidden;
+    //visibility: hidden;
     height: 80%;
     width: 100%;
     
