--- a/css/main.css
+++ b/css/main.css
@@ -311,7 +311,7 @@ table {
 
 .modal {
   position: fixed;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   top: 0px;
