local storage update

--- a/css/_quiz-modal.scss
+++ b/css/_quiz-modal.scss
@@ -5,7 +5,7 @@
     align-items: center;
     top: 0px;
     left: 0px;
-    //visibility: hidden;
+    //visibility: visible;
     height: 80%;
     width: 100%;
     
@@ -50,10 +50,10 @@
     background-color: green;
     transition: 1s;
 }
+*/
 .open-modal {
     opacity: 1;
     visibility: visible;
     transform: scale(1.0);
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
-*/
