--- a/css/_quiz-modal.scss
+++ b/css/_quiz-modal.scss
@@ -10,6 +10,25 @@
     width: 100%;
     
 }
+
+.selected {
+    background-color: rgba(255, 255, 255, .1);
+    color: whitesmoke;
+}
+
+.hidden {
+    display: none;
+}
+
+.correct {
+    background-color: darkgreen;
+    color: whitesmoke;
+}
+
+.wrong {
+    background-color: darkred;
+    color: whitesmoke;
+}
 /*
 .modal-content{
     
@@ -50,10 +69,10 @@
     background-color: green;
     transition: 1s;
 }
+*/
 .open-modal {
     opacity: 1;
     visibility: visible;
     transform: scale(1.0);
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
-*/
