--- a/css/main.css
+++ b/css/main.css
@@ -309,6 +309,36 @@ table {
   border-radius: 0.5rem;
 }
 
+.highscore-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: auto;
+}
+
+.fa-crown {
+  visibility: hidden;
+  color: #ffd650;
+  transform: scale(2);
+}
+
+.highscore-output {
+  margin: 1rem;
+  width: 40%;
+  height: auto;
+  text-align: center;
+}
+
+li {
+  padding: 0.5rem;
+  margin: 0.3rem;
+  border: 5px ridge #ffd650;
+  border-radius: 0.5rem;
+  box-shadow: 5px 4px 5px 2px rgba(0, 0, 0, 0.56);
+}
+
 .modal {
   position: fixed;
   display: none;
