--- a/css/_quiz-layout.scss
+++ b/css/_quiz-layout.scss
@@ -68,10 +68,11 @@
     height: auto;
     text-align: center;
 }
-li{
+.highscore-output li{
     padding: .5rem;
     margin: .3rem;
     border: 5px ridge #ffd650;
     border-radius: .5rem;
     box-shadow: 5px 4px 5px 2px rgba(0,0,0,0.56);
+    list-style: number;
 }
