--- a/css/main.css
+++ b/css/main.css
@@ -331,12 +331,13 @@ table {
   text-align: center;
 }
 
-li {
+.highscore-output li {
   padding: 0.5rem;
   margin: 0.3rem;
   border: 5px ridge #ffd650;
   border-radius: 0.5rem;
   box-shadow: 5px 4px 5px 2px rgba(0, 0, 0, 0.56);
+  list-style: number;
 }
 
 .modal {
