--- a/css/_quiz-modal.scss
+++ b/css/_quiz-modal.scss
@@ -1,11 +1,10 @@
 .modal{
     position: fixed;
-    display: none;
     justify-content: center;
     align-items: center;
     top: 0px;
     left: 0px;
-    //visibility: visible;
+    display: none;
     height: 80%;
     width: 100%;
     
@@ -13,20 +12,6 @@
 
 .selected {
     background-color: rgba(255, 255, 255, .1);
-    color: whitesmoke;
-}
-
-.hidden {
-    display: none;
-}
-
-.correct {
-    background-color: darkgreen;
-    color: whitesmoke;
-}
-
-.wrong {
-    background-color: darkred;
     color: whitesmoke;
 }
 /*
@@ -72,7 +57,6 @@
 */
 .open-modal {
     opacity: 1;
-    visibility: visible;
     transform: scale(1.0);
-    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+    transition: all 0.25s;
 }
