--- a/css/main.css
+++ b/css/main.css
@@ -342,31 +342,17 @@ table {
 
 .modal {
   position: fixed;
-  display: none;
   justify-content: center;
   align-items: center;
   top: 0px;
   left: 0px;
+  display: none;
   height: 80%;
   width: 100%;
 }
 
 .selected {
   background-color: rgba(255, 255, 255, 0.1);
-  color: whitesmoke;
-}
-
-.hidden {
-  display: none;
-}
-
-.correct {
-  background-color: darkgreen;
-  color: whitesmoke;
-}
-
-.wrong {
-  background-color: darkred;
   color: whitesmoke;
 }
 
@@ -413,9 +399,8 @@ table {
 */
 .open-modal {
   opacity: 1;
-  visibility: visible;
   transform: scale(1);
-  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+  transition: all 0.25s;
 }
 
 card-item {
