--- a/css/_quiz-modal.scss
+++ b/css/_quiz-modal.scss
@@ -2,12 +2,12 @@
     position: fixed;
     justify-content: center;
     align-items: center;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     display: none;
-    height: 80%;
+    height: 100%;
     width: 100%;
-    
+    background: rgba(0,0,0,.5);
 }
 
 .selected {
@@ -15,8 +15,7 @@
     color: whitesmoke;
 }
 /*
-.modal-content{
-    
+.modal-content{   
     box-shadow:  10px 8px 5px rgba(55, 0, 58, .2);
     color: white;
     width: 50%;
