--- a/css/main.css
+++ b/css/main.css
@@ -135,19 +135,6 @@ table {
   }
 }
 
-.content-filters {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.content-filters select, .content-filters input, .content-filters select option {
-  text-align: center;
-  padding: 5px;
-  width: 80%;
-  border-radius: 10px;
-  margin: 10px;
-}
-
 .page-headline {
   text-align: center;
   font-size: 1.5rem;
@@ -256,6 +243,27 @@ table {
 .banner-container .banner-overlay .title {
   font-size: 2rem;
   padding: 10px;
+}
+.banner-container .home-banner {
+  height: 400px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  background: linear-gradient(90deg, #4d1b4e 0%, #1f40c8 100%);
+  color: white;
+}
+.banner-container .home-banner span {
+  width: 150px;
+  border: 1px solid white;
+  padding: 15px;
+  margin: 15px auto;
+  font-weight: 600;
+  font-size: 3.5rem;
+  display: block;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.1);
 }
 
 .user-section {
@@ -403,14 +411,70 @@ table {
   transition: all 0.25s;
 }
 
-card-item {
-  width: 400px;
+.content-header {
+  display: none;
+}
+.content-header .content-filters {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.content-header .content-filters select, .content-header .content-filters input, .content-header .content-filters select option {
+  text-align: center;
+  padding: 5px;
+  width: 80%;
+  border-radius: 10px;
+  margin: 10px;
+}
+
+.welcome-msg {
+  width: 100%;
+  max-width: 400px;
+  text-align: center;
+  margin: 20px auto;
+  border-radius: 5px;
+  box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.75);
+}
+.welcome-msg h2 {
+  padding: 20px;
+  font-size: 1.2rem;
+}
+.welcome-msg p {
+  margin: 10px;
+}
+.welcome-msg a {
+  width: 200px;
+  border: 1px solid;
+  padding: 10px 20px;
+  display: block;
+  text-align: center;
+  margin: 10px auto;
+  text-decoration: none;
+  color: #37003A;
+  border: 1px solid #37003A;
+}
+.welcome-msg a:hover {
+  color: white;
+  background: #37003A;
+  transition: 1s;
 }
 
 #content-output {
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(1, auto);
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+}
+
+.card {
+  width: 320px;
+  height: 450px;
+  box-shadow: inset 5px 5px 5px rgba(55, 0, 58, 0.2), inset -5px -5px 15px rgba(69, 19, 73, 0.1), 5px 5px 15px rgba(55, 0, 58, 0.3), -5px -5px 15px rgba(69, 19, 73, 0.1);
+  border-radius: 15px;
+  margin: 20px auto;
+  padding: 20px;
+  perspective: 1000px;
 }
 
 @media only screen and (min-width: 576px) {
@@ -421,5 +485,15 @@ card-item {
 @media only screen and (min-width: 971px) {
   #content-output {
     grid-template-columns: repeat(3, auto);
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+  }
+
+  .card {
+    width: 320px;
+  }
+
+  .content-header .content-filters {
+    flex-direction: row;
   }
 }/*# sourceMappingURL=main.css.map */
