--- a/css/_quiz-modal.scss
+++ b/css/_quiz-modal.scss
@@ -14,6 +14,13 @@
     background-color: rgba(255, 255, 255, .1);
     color: whitesmoke;
 }
+.confetti{
+    width:7px;
+    height:12px;
+    position:absolute;
+    background-color:#00FF00;
+    z-index:2;
+  }
 /*
 .modal-content{   
     box-shadow:  10px 8px 5px rgba(55, 0, 58, .2);
