--- a/css/main.css
+++ b/css/main.css
@@ -333,7 +333,6 @@ table {
 }
 
 .fa-crown {
-  visibility: hidden;
   color: #ffd650;
   transform: scale(2);
 }
@@ -345,13 +344,17 @@ table {
   text-align: center;
 }
 
-.highscore-output li {
+.highscore-output p {
   padding: 0.5rem;
   margin: 0.3rem;
   border: 5px ridge #ffd650;
   border-radius: 0.5rem;
   box-shadow: 5px 4px 5px 2px rgba(0, 0, 0, 0.56);
   list-style: number;
+}
+
+.hidden {
+  display: none;
 }
 
 .box {
@@ -502,7 +505,7 @@ table {
   perspective: 1000px;
 }
 
-@media only screen and (min-width: 576px) {
+@media only screen and (min-width: 577px) {
   #content-output {
     grid-template-columns: repeat(2, auto);
   }
