--- a/css/_quiz-layout.scss
+++ b/css/_quiz-layout.scss
@@ -72,10 +72,10 @@
 .highscore-output{
     margin: 1rem;
     width: 40%;
-    height: auto;
+    height: 1000px;
     text-align: center;
 }
-.highscore-output p{
+.highscore-output h4{
     padding: .5rem;
     margin: .3rem;
     border: 5px ridge #ffd650;
