--- a/css/main.css
+++ b/css/main.css
@@ -340,11 +340,11 @@ table {
 .highscore-output {
   margin: 1rem;
   width: 40%;
-  height: auto;
+  height: 1000px;
   text-align: center;
 }
 
-.highscore-output p {
+.highscore-output h4 {
   padding: 0.5rem;
   margin: 0.3rem;
   border: 5px ridge #ffd650;
