--- a/css/_quiz-layout.scss
+++ b/css/_quiz-layout.scss
@@ -3,6 +3,11 @@
     padding: 1rem;
     text-align: center;
 }
+.border-box{
+    margin: 20px auto;
+    border-radius: 5px;
+    box-shadow: 2px 2px 8px 2px rgba(0,0,0,0.75);
+}
 .select-cursor{
     cursor: pointer;
 }
