--- a/css/main.css
+++ b/css/main.css
@@ -272,6 +272,12 @@ table {
   text-align: center;
 }
 
+.border-box {
+  margin: 20px auto;
+  border-radius: 5px;
+  box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.75);
+}
+
 .select-cursor {
   cursor: pointer;
 }
