--- a/css/_quiz-layout.scss
+++ b/css/_quiz-layout.scss
@@ -3,11 +3,6 @@
     padding: 1rem;
     text-align: center;
 }
-.border-box{
-    margin: 20px auto;
-    border-radius: 5px;
-    box-shadow: 2px 2px 8px 2px rgba(0,0,0,0.75);
-}
 .select-cursor{
     cursor: pointer;
 }
@@ -18,7 +13,6 @@
 .input-container{
     text-align: center;
     padding: 1rem;
-    border: 1px solid red;
     display: flex;
     flex-wrap: wrap;
     align-content: center;
@@ -28,15 +22,14 @@
     #name-input{
         margin: 0.2rem;
     }
-}
-.user-output{
-    border: 1px solid red;
-}
-    
+}   
 .quiz{
     display: flex;
     flex-direction: column;
-    margin: 1rem;
+    width: 90%;
+    margin: 20px auto;
+    border-radius: 5px;
+    box-shadow: 2px 2px 8px 2px rgba(0,0,0,0.75);
 
     &__header{
         padding: 1rem;
@@ -47,7 +40,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        border: 1px solid red;
         margin: 0.5rem;
     }
 
@@ -94,7 +86,6 @@
 .box{
     height: 50px;
     width: 50px;
-    background-color: red;
 }
 
 @media only screen and (min-width: 577px) {
