--- a/css/_quiz-layout.scss
+++ b/css/_quiz-layout.scss
@@ -11,16 +11,18 @@
     font-weight: bold;
 }
 .input-container{
-    text-align: center;
     padding: 1rem;
     display: flex;
     flex-wrap: wrap;
     align-content: center;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
     
     #name-input{
-        margin: 0.2rem;
+        padding: 5px;
+        text-align: center;
+        margin: 10px;
     }
 }   
 .quiz{
