--- a/css/_quiz-layout.scss
+++ b/css/_quiz-layout.scss
@@ -92,6 +92,11 @@
 
 @media only screen and (min-width: 577px) {
     .input-container{
-    flex-direction: row;
+        flex-direction: row;
+    }
+}
+@media only screen and (min-width: 971px) {
+    .quiz{
+        width: 800px;
     }
 }
