--- a/css/main.css
+++ b/css/main.css
@@ -273,6 +273,11 @@ table {
     flex-direction: row;
   }
 }
+@media only screen and (min-width: 971px) {
+  .quiz {
+    width: 800px;
+  }
+}
 .modal {
   position: fixed;
   justify-content: center;
