--- a/css/main.css
+++ b/css/main.css
@@ -394,5 +394,10 @@ table {
 
   .content-header .content-filters {
     flex-direction: row;
+    justify-content: center;
+  }
+
+  #filter-select, #search-bar {
+    width: 300px;
   }
 }/*# sourceMappingURL=main.css.map */
