--- a/css/_index-layout.scss
+++ b/css/_index-layout.scss
@@ -15,8 +15,7 @@
         }
     }
 }
-
-.welcome-msg{
+.info-container{
     width: 100%;
     max-width: 400px;
     text-align: center;
@@ -30,6 +29,10 @@
     }
     p{
         margin: 10px;
+    }
+    .tabs-container{
+        width: 80%;
+        margin: 0 auto;
     }
 }
 
@@ -83,6 +86,7 @@
     }
     .card{
         width: 320px;
+        height: 450px;
     }
     .content-header .content-filters{
         flex-direction: row;
