--- a/css/_index-layout.scss
+++ b/css/_index-layout.scss
@@ -1,5 +1,6 @@
 .content-header{
     display: none;
+    position: relative;
     
     .content-filters{
         display: flex;
@@ -15,7 +16,33 @@
         }
     }
 }
+.tooltip{
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    background: white;
+    
+    .tooltip-icon{
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        font-size: 2rem;
+        color: #37003A;
+    }
+    .tooltip-text{
+        padding: 20px;
+        display: none;
+    }
+
+    &:hover .tooltip-text{
+        background: #37003A;
+        margin-right: 50px;
+        display: block;
+        color: white;
+    }
+}
 .info-container{
+    position: relative;
     width: 100%;
     max-width: 400px;
     text-align: center;
